--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,8 +3,10 @@
         <meta http-equiz = "X-UA-compatible" content="IE=edge">
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <title>Doccument</title> 
+        <link rel="stylesheet" href="/css/styles.css">
         </head> 
         <body>
             <h1>Hello boy ejs</h1>
+            <img src="/image/abc.png"/>
         </body>
  </html>
