--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,6 +7,7 @@
         </head> 
         <body>
             <h1>Hello boy ejs</h1>
+            <%= datauser %>
             <img src="/image/abc.png"/>
         </body>
  </html>
