--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,56 @@
-<html  lang="en">
-    <head><meta charset="UTF-8">
-        <meta http-equiz = "X-UA-compatible" content="IE=edge">
-        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
-        <title>Doccument</title> 
-        <link rel="stylesheet" href="/css/styles.css">
-        </head> 
-        <body>
-            <h1>Hello boy ejs</h1>
-            <%= datauser %>
-            <img src="/image/abc.png"/>
-        </body>
- </html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiz="X-UA-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ahihi Do ngoc</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+</head>
+
+<body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+
+    <div>
+        <%= dataUser %>
+            <table>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Actoins</th>
+                </tr>
+            
+                <tbody>
+                    <% for(let i=0; i < dataUser.length; i++) { %>
+                        <tr>
+                            <td>
+                                <%= dataUser[i].id %>
+                            </td>
+                            <td>
+                                <%= dataUser[i].firsName %>
+                            </td>
+                            <td>
+                                <%= dataUser[i].lastName %>
+                            </td>
+                            <td>
+                                <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a>
+                                <button type="button">Edit</button>
+                                <button type="button">Delete</button>
+
+                            </td>
+                        </tr>
+                        <% } %>
+                </tbody>
+            </table>
+    </div>
+
+</body>
+
+</html>
