--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -27,3 +27,26 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+.creat-user-container{
+  padding: 15px;
+  text-align: center;
+}
+.creat-user-container  label{
+  display: block;
+}
+
+.creat-user-container .btn-submit{
+  margin-top: 15px;
+  cursor: pointer;
+}
+.update-user-container{
+  padding: 15px;
+  text-align: center;
+}
+.update-user-container label{
+  display: block;
+}
+.btn-save{
+  margin-top: 15px;
+  cursor: pointer;
+}
