--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,6 @@
     </div>
 
     <div>
-        <%= dataUser %>
             <table>
                 <tr>
                     <th>ID</th>
@@ -34,23 +33,50 @@
                                 <%= dataUser[i].id %>
                             </td>
                             <td>
-                                <%= dataUser[i].firsName %>
+                                <%= dataUser[i].firstName %>
                             </td>
                             <td>
                                 <%= dataUser[i].lastName %>
                             </td>
                             <td>
                                 <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a>
-                                <button type="button">Edit</button>
-                                <button type="button">Delete</button>
-
+                                <form action="/edit-user/<%= dataUser[i].id %>" method="GET">
+                                    <button type="submit">Edit</button>
+                                </form>
+                                <form action="/delete-user" method="POST" >
+                                    <input type="text" hidden value="<%= dataUser[i].id %>" name="userId"/>
+                                <button type="submit">Delete</button>
+                            </form>        
                             </td>
                         </tr>
                         <% } %>
                 </tbody>
             </table>
     </div>
-
+    <div class ="creat-user-container">
+        <div> <b>Create a new user</b>   </div>
+        <form action="/create-new-user" method="POST" >
+           <div> 
+            <label>firstName:</label>
+            <input type="text" name="firstName"/>
+           </div> 
+           <div> 
+            <label>lastName:</label>
+            <input type="text" name="lastName"/>
+           </div> 
+           <div> 
+            <label>email:</label>
+            <input type="email" name="email"/>
+           </div> 
+           <div> 
+            <label>address:</label>
+            <input type="text" name="address"/>
+           </div> 
+           <div>
+            <button type="submit" class="btn-submit">Submit</button>
+           </div>
+        </form>
+    </div>
 </body>
 
 </html>
