--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -50,3 +50,9 @@ body {
   margin-top: 15px;
   cursor: pointer;
 }
+upload-file-container{
+  padding: 15px;
+}
+upload-file-container label{
+  display: block;
+}
