--- a/src/views/uploadfile.ejs
+++ b/src/views/uploadfile.ejs
@@ -33,7 +33,7 @@
          
         <div>
             <label>select images:</label>
-            <input type="file" name="profile_images" multiple/>
+            <input type="file" name="multiple_images" multiple/>
         </div>    
         <div>
             <button class="btn-save" type="btn_upload_multiple_images" value="Upload">upload</button>
